--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^3.19.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^4.0.0",
     "gulp-ejs": "^3.3.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-rename": "^1.4.0",
