--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-less": "^3.5.0",
     "jquery": "^3.3.1",
     "jquery.cookie": "^1.4.1",
+    "moment": "^2.24.0",
     "natives": "^1.1.6"
   }
 }
