--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
   "author": "Evgeny Nadolinsky",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "eslint": "^3.19.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^4.0.0",
     "gulp-ejs": "^3.3.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
+    "jquery": "^3.3.1",
     "stylelint": "^7.10.1",
+    "webpack": "^4.29.6",
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
     "gulp-less": "^3.5.0",
-    "jquery": "^3.3.1",
     "jquery.cookie": "^1.4.1",
     "moment": "^2.24.0",
     "natives": "^1.1.6"
