--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "gulp-less": "^3.5.0",
     "jquery.cookie": "^1.4.1",
     "moment": "^2.24.0",
